// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cell reducer > can initialize stdin > initial state 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": null,
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin > prepared for run 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin > queued message received 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin > running message received 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin > second stdin requested 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 1,
    },
    {
      "channel": "stdin",
      "data": "what is your name?",
      "mimetype": "text/plain",
      "response": "Marimo!",
      "timestamp": 2,
    },
    {
      "channel": "stdin",
      "data": "how old are you?",
      "mimetype": "text/plain",
      "timestamp": 3,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin > stdin answered 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 1,
    },
    {
      "channel": "stdin",
      "data": "what is your name?",
      "mimetype": "text/plain",
      "response": "Marimo!",
      "timestamp": 2,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin > stdin requested 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 1,
    },
    {
      "channel": "stdin",
      "data": "what is your name?",
      "mimetype": "text/plain",
      "timestamp": 2,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin > stdout received 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 1,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can initialize stdin > stdout verified 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 1,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can receive console when the cell is idle and will clear when starts again > console cleared while running 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can receive console when the cell is idle and will clear when starts again > console received while idle 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdin",
      "data": "hello again!",
      "mimetype": "text/plain",
      "timestamp": 2,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": 2000,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can receive console when the cell is idle and will clear when starts again > initial state 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": null,
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can receive console when the cell is idle and will clear when starts again > prepared for run 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 1,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can receive console when the cell is idle and will clear when starts again > queued message received 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 1,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can run a stale cell > queued message received 1`] = `
{
  "code": "mo.slider()",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "1",
  "interrupted": false,
  "lastCodeRun": "mo.slider()",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can run a stale cell > stale inputs received 1`] = `
{
  "code": "mo.slider()",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "1",
  "interrupted": false,
  "lastCodeRun": "mo.slider()",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": true,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can run a stopped cell > ancestor stopped 1`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "marimo-error",
    "data": [
      {
        "msg": "This cell wasn't run because an ancestor was stopped with \`mo.stop\`: ",
        "raising_cell": "2",
        "type": "ancestor-stopped",
      },
    ],
    "mimetype": "application/vnd.marimo+error",
    "timestamp": 20,
  },
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": true,
}
`;

exports[`cell reducer > can run a stopped cell > idle message received 1`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run a stopped cell > queued after stop 1`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "marimo-error",
    "data": [
      {
        "msg": "This cell wasn't run because an ancestor was stopped with \`mo.stop\`: ",
        "raising_cell": "2",
        "type": "ancestor-stopped",
      },
    ],
    "mimetype": "application/vnd.marimo+error",
    "timestamp": 20,
  },
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": true,
}
`;

exports[`cell reducer > can run a stopped cell > queued message received 1`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can run a stopped cell > running after stop 1`] = `
{
  "code": "mo.md('This has an ancestor that was stopped')",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "mo.md('This has an ancestor that was stopped')",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 40,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 40,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages > code changed after revert 1`] = `
{
  "code": "import marimo as mo
import numpy",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "debuggerActive": false,
  "edited": true,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "output",
    "data": "ok",
    "mimetype": "text/plain",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 13000,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages > code edited 1`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": true,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": null,
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages > code edited again 1`] = `
{
  "code": "import marimo as mo
import numpy",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "debuggerActive": false,
  "edited": true,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "output",
    "data": "ok",
    "mimetype": "text/plain",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 13000,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages > code reverted 1`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "output",
    "data": "ok",
    "mimetype": "text/plain",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 13000,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages > console message received 1`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages > error response received 1`] = `
{
  "code": "import marimo as mo
import numpy",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": true,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo
import numpy",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 50,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "marimo-error",
    "data": [
      {
        "exception_type": "ValueError",
        "msg": "Oh no!",
        "type": "exception",
      },
    ],
    "mimetype": "application/vnd.marimo+error",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 11000,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages > initial state 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": null,
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages > interruption response received 1`] = `
{
  "code": "import marimo as mo
import numpy",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": true,
  "lastCodeRun": "import marimo as mo
import numpy",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 50,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "marimo-error",
    "data": [
      {
        "type": "interruption",
      },
    ],
    "mimetype": "application/vnd.marimo+error",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 11000,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages > output received 1`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [
    {
      "channel": "stdout",
      "data": "hello!hello!",
      "mimetype": "text/plain",
      "timestamp": 0,
    },
  ],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "output",
    "data": "ok",
    "mimetype": "text/plain",
    "timestamp": 0,
  },
  "runElapsedTimeMs": 13000,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages > prepared for run 1`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages > queued message received 1`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;

exports[`cell reducer > can run cell and receive cell messages > running message received 1`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": 20,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": 20,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "running",
  "stopped": false,
}
`;

exports[`cell reducer > errors reset status to idle > code edited 1`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": true,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": null,
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > errors reset status to idle > error response received 1`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": true,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": {
    "channel": "marimo-error",
    "data": [
      {
        "exception_type": "SyntaxError",
        "msg": "Oh no!",
        "type": "exception",
      },
    ],
    "mimetype": "application/vnd.marimo+error",
    "timestamp": 0,
  },
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > errors reset status to idle > initial state 1`] = `
{
  "code": "",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": null,
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "idle",
  "stopped": false,
}
`;

exports[`cell reducer > errors reset status to idle > prepared for run 1`] = `
{
  "code": "import marimo as mo",
  "config": {
    "column": null,
    "disabled": false,
    "hide_code": false,
  },
  "consoleOutputs": [],
  "debuggerActive": false,
  "edited": false,
  "errored": false,
  "id": "0",
  "interrupted": false,
  "lastCodeRun": "import marimo as mo",
  "lastExecutionTime": null,
  "lastRunStartTimestamp": null,
  "name": "_",
  "outline": null,
  "output": null,
  "runElapsedTimeMs": null,
  "runStartTimestamp": null,
  "serializedEditorState": null,
  "staleInputs": false,
  "status": "queued",
  "stopped": false,
}
`;
